# gemino

./: README.md  dune-project  gemino.opam  gemmo.opam
frontend/: README.md  pubspec.yaml
frontend/lib/: contentmodel.dart  gemtext.dart  ipc.dart  main.dart  renderer.dart
frontend/lib/widgets/: inputprompter.dart  mainscreen.dart  urlbar.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/test/: widget_test.dart
lib/: browser.ml  browser.mli  dune  gemini.ml  gemini.mli  gemtext.ml  gemtext.mli  ipc.ml  ipc.mli  msg.ml  msg.mli  net.ml  net.mli  types.ml
test/: dune  gemtext.ml  test_gemino.ml  test_gemmo.ml
